@@ -1,3 +1,9 @@
+2004-11-14  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* src/check_config.c:
+	Generate size of types explicitly.
+	Fix comment near Win32 linking pragma.
+
 2004-11-01  Pascal Obry  <pascal@obry.org>
 
 	* aws-net-std__gnat.adb:
